examples/test/testpolicy4239.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4239
  namespace: namespace228
spec:
  podSelector:
    matchLabels:
      key14: value44
      key16: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value46
      podSelector:
        matchLabels:
          key41: value12
          key1: value48
          key44: value18
